<resources>
    <string name="app_name">ExRateCalc</string>

    <string name="main_title">환율 계산</string>
    <string name="send_country">송금국가 :&#160;</string>
    <string name="recieve_country">수취국가 :&#160;</string>
    <string name="exchange_rate">환율 :&#160;</string>
    <string name="check_time">조회시간 :&#160;</string>
    <string name="remittance">송금액 :&#160;</string>
    <string name="result_ment">수취금액은 %1$s 입니다.</string>


    <string name="country_usd">미국(USD)</string>
    <string name="country_krw">한국(KRW)</string>
    <string name="country_jpy">일본(JPY)</string>
    <string name="country_php">필리핀(PHP)</string>


    <string name="usd">USD</string>
</resources>